src/runtime/snapshots/ghat__runtime__tests__api_workflow_context_rejects_typo.snap
---
source: src/runtime/tests.rs
expression: "snapshot_err(files, &err)"
---
=== /workflows/bad.ts ===
workflow("Bad", {
    on: triggers({ push: ["main"] }),
    run_name: (ctx) => `${ctx.secerts.TOKEN}`,
    jobs(ctx) {},
});
=== error ===

  x unknown context 'secerts' in 'Bad > run_name'
   ,-[/workflows/bad.ts:4:1]
 3 |     on: triggers({ push: ["main"] }),
 4 |     run_name: (ctx) => `${ctx.secerts.TOKEN}`,
   : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 5 |     jobs(ctx) {},
   `----
