src/runtime/snapshots/ghat__runtime__tests__api_workflow_run_name_rejects_secrets.snap
---
source: src/runtime/tests.rs
expression: "snapshot_err(files, &err)"
---
=== /workflows/bad.ts ===
workflow("Bad", {
    on: triggers({ push: ["main"] }),
    run_name: (ctx) => `${ctx.secrets.TOKEN}`,
    jobs(ctx) {},
});
=== error ===

  x context 'secrets' is not available in 'Bad > run_name' (available: github,
  | inputs, vars)
   ,-[/workflows/bad.ts:4:1]
 3 |     on: triggers({ push: ["main"] }),
 4 |     run_name: (ctx) => `${ctx.secrets.TOKEN}`,
   : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 5 |     jobs(ctx) {},
   `----
