src/runtime/snapshots/ghat__runtime__tests__api_workflow_run_name_rejects_strategy.snap
---
source: src/runtime/tests.rs
expression: "snapshot_err(files, &err)"
---
=== /workflows/bad.ts ===
workflow("Bad", {
    on: triggers({ push: ["main"] }),
    run_name: (ctx) => `${ctx.strategy.fail_fast}`,
    jobs(ctx) {},
});
=== error ===

  x context 'strategy' is not available in 'Bad > run_name' (available:
  | github, inputs, vars)
   ,-[/workflows/bad.ts:4:1]
 3 |     on: triggers({ push: ["main"] }),
 4 |     run_name: (ctx) => `${ctx.strategy.fail_fast}`,
   : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 5 |     jobs(ctx) {},
   `----
