src/runtime/snapshots/ghat__runtime__tests__define_workflow_invalid_data.snap
---
source: src/runtime/tests.rs
expression: "snapshot_err(files, &err)"
---
=== /workflows/bad.js ===
__define_workflow("Bad", { invalid: true });
=== error ===
String(Ok("missing field `on`"))
