src/runtime/snapshots/ghat__runtime__tests__module_import_from_subdirectory.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/lib/steps.js ===
export function checkStep() { return { run: "cargo check" }; }
=== /workflows/ci.js ===
import { checkStep } from "./lib/steps.js";

__define_workflow("CI", {
    name: "CI",
    on: { push: { branches: ["main"] } },
    jobs: {
        check: {
            name: "check",
            "runs-on": "ubuntu-latest",
            steps: [checkStep()]
        }
    }
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  check:
    name: check
    runs-on: ubuntu-latest
    steps:
    - run: cargo check
