src/runtime/snapshots/ghat__runtime__tests__module_js_extension_resolution.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/_utils.js ===
export function runner() { return "ubuntu-latest"; }
=== /workflows/ci.js ===
import { runner } from "./_utils";

__define_workflow("CI", {
    name: "CI",
    on: { push: { branches: ["main"] } },
    jobs: {
        test: {
            name: "test",
            "runs-on": runner(),
            steps: [{ run: "echo ok" }]
        }
    }
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: test
    runs-on: ubuntu-latest
    steps:
    - run: echo ok
