src/runtime/snapshots/ghat__runtime__tests__module_missing_import_error_js.snap
---
source: src/runtime/tests.rs
expression: "snapshot_err(files, &err)"
---
=== /workflows/bad.js ===
import { foo } from "./_nonexistent.js";
foo();
=== error ===
Error loading module '/workflows/_nonexistent.js': /workflows/_nonexistent.js
