src/runtime/snapshots/ghat__runtime__tests__module_missing_import_error_ts.snap
---
source: src/runtime/tests.rs
expression: "snapshot_err(files, &err)"
---
=== /workflows/bad.ts ===
import { foo } from "./_nonexistent.ts";
foo();
=== error ===
Error loading module '/workflows/_nonexistent.ts': /workflows/_nonexistent.ts
